build: Add handlebars

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^10.0.0",
     "express": "~4.17.1",
     "express-handlebars": "~5.3.3",
+    "express-session": "^1.17.2",
     "jsonwebtoken": "~8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "~6.0.4",
@@ -37,6 +38,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-handlebars": "^5.3.1",
+    "@types/express-session": "^1.17.4",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/method-override": "0.0.32",
     "@types/mongoose": "^5.11.97",
