--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.17.2",
     "jsonwebtoken": "~8.5.1",
     "method-override": "^3.0.0",
+    "moment": "^2.29.1",
     "mongoose": "~6.0.4",
     "passport": "~0.4.1",
     "passport-jwt": "~4.0.0"
