--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "moment": "^2.29.1",
     "mongoose": "~6.0.4",
     "passport": "~0.4.1",
-    "passport-jwt": "~4.0.0"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -46,7 +46,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.7.10",
     "@types/passport": "^1.0.7",
-    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "morgan": "~1.10.0",
     "nodemon": "~2.0.12"
   }
