--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/OscarEHF/notes-app#readme",
   "bugs": "https://github.com/OscarEHF/notes-app/issues",
   "dependencies": {
-    "bcrypt": "~5.0.1",
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cors": "~2.8.5",
     "dotenv": "^10.0.0",
@@ -34,7 +34,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/connect-flash": "0.0.37",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
